--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ footer{
 
 .navbar{
     display: flex;
-    background-color: whitesmoke;
     position:fixed;
     z-index: 1;
 
@@ -55,22 +54,17 @@ body{ font-family: 'Nunito', sans-serif;
 .navini a{
     color: black;
     font-family: 'Nunito', sans-serif;
-    font-size: 15px;
+    font-size: 16.42px;
     margin-right: 75.5px;
     margin-left: 21px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
     text-decoration: none;
-    padding: 5px 0px 5px 0px;
 }
 
 .navini{
-    margin-top: 10px;
-    margin-right: 91px;
-    margin-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 50px;
+    padding-left: 50px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
 }
@@ -90,12 +84,12 @@ body{ font-family: 'Nunito', sans-serif;
 .slide{
     height: auto;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 35px;
 }
 
 
 .envios h3{
-    display: inline;
+    display: inline-block;
     border-bottom:lightgray solid 2px;
     font-size: 22px;
     color:gray;
@@ -103,6 +97,7 @@ body{ font-family: 'Nunito', sans-serif;
     margin-inline: 25px;
 }
 .envios{
+    flex-wrap: wrap;
     margin-top: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
@@ -121,6 +116,7 @@ body{ font-family: 'Nunito', sans-serif;
 }
 .maqsini-text{
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     top: 200px;
     justify-content: space-around;
@@ -142,6 +138,7 @@ body{ font-family: 'Nunito', sans-serif;
 }
 .maquinas4{
     display: flex;
+    flex-wrap: wrap;
 }
 .maquinas4 img{
  height: auto;
@@ -157,6 +154,7 @@ body{ font-family: 'Nunito', sans-serif;
 
 .visionini{
     display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -167,9 +165,10 @@ body{ font-family: 'Nunito', sans-serif;
 
 .visionini img{
     height: auto;
-    width: 850px;
+    width: 100%;
     margin-left: 20px;
     margin-bottom: 40px;
+    margin-right: 20px;
 }
 
 .conocer-mas a{
@@ -180,6 +179,7 @@ color: white;
 
 .conocer-mas{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .video{
@@ -225,6 +225,7 @@ header-p{
 footer-p{
     grid-area: footer;
     display: flex;
+    flex-wrap: wrap;
     background-color: black;
 
 }
@@ -252,6 +253,7 @@ footer-p{
   
 .footini{
     display: flex;
+    flex-wrap: wrap;
     color: white;
     padding:10px 20px 10px 20px;
 }
@@ -267,11 +269,14 @@ width: auto;
 
 .footpago{
     display: inline-block;
+    flex-wrap: wrap;
     padding: 0 10px 5px 5px;
 }
+
 .ig-padre{
     margin: 50px 50px 50px 500px;
     font-size: 20px;
+    flex-wrap: wrap;
 }
 
 .igini a{
@@ -325,6 +330,7 @@ width: auto;
 
 footer{
     height: 360px;
+    flex-wrap: wrap;
 }
 
 .padre{
@@ -355,13 +361,13 @@ footer{
     width: 100%;
     height: 768px;
   
-    display: grid;
+    /**display: grid;
     grid:
       "header" auto
       "main" 1fr
       "footer" auto
       / 1fr;
-    gap: 8px;
+    gap: 8px;**/
   }
   
   .header { 
@@ -378,4 +384,50 @@ footer{
     width: 100%;
     height: auto;
     margin: 50px 0px 0px 0px;
+}
+
+@media screen and (max-width:500px) {
+    .envios{
+        flex-direction: column;
+        
+}
+    .slide{
+        margin-top: 150px;
+    }
+
+    .maqsini-img{
+        flex-direction: column;
+        width: auto;
+        height: auto;
+        align-self: auto;
+        
+    }
+    .slogan-1{
+        flex-direction: column;
+        
+    }
+    .visionini{
+        margin-top: 1600px;
+        img{
+            width: 100%;
+            height: auto;
+        }
+        align-items: center;
+    }
+    footer{
+        margin-top: 2000px;
+        flex-direction: column-reverse;
+        
+
+    }
+    .ig-padre{
+        margin: 5px 5px 5px 5px ;
+
+    }
+    .logo{
+        flex-direction: column;
+        align-self: center;
+    }
+
+    
 }
