--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -1,1 +1,441 @@
-/*# sourceMappingURL=style.css.map */
+#grilla {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 700px 900px 2000px 360px;
+  grid-template-areas: "nav nav nav" "slide slide slide" "productos productos productos" "vision vision vision" "footer footer footer";
+}
+
+.border {
+  border: none;
+}
+
+header {
+  grid-area: nav;
+}
+
+#slide {
+  grid-area: slide;
+}
+
+#prods {
+  grid-area: productos;
+}
+
+#vision {
+  grid-area: vision;
+}
+
+footer {
+  grid-area: footer;
+}
+
+#grilla-p {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 60px 3400px 2200px 2200px 400px;
+  grid-template-areas: "nav nav nav" "productos productos productos" "vision vision vision" "slide slide slide" "footer footer footer";
+}
+
+.border-p {
+  border: none;
+}
+
+header-p {
+  grid-area: nav;
+}
+
+#slide-p {
+  grid-area: slide;
+}
+
+#prods-p {
+  grid-area: productos;
+}
+
+#vision-p {
+  grid-area: vision;
+}
+
+footer-p {
+  grid-area: footer;
+}
+
+img.slide-img {
+  height: auto;
+  width: 100%;
+  margin-top: 25px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.navbar {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+}
+.navbar .navini {
+  padding-right: 50px;
+  padding-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.navbar .navini a {
+  color: black;
+  font-family: "Nunito", sans-serif;
+  font-size: 16.47px;
+  margin-right: 75.5px;
+  margin-left: 21px;
+  text-decoration: none;
+  padding-inline: 12px;
+}
+.navbar .navini img {
+  width: 100px;
+  height: auto;
+  margin: 0 0 3px 0;
+  border-bottom: 2px solid black;
+}
+
+section#prods div.maqsini-img {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  text-align: center;
+  flex-wrap: wrap;
+}
+section#prods div.maqsini-img div.img-envios img {
+  height: auto;
+  width: 333px;
+  padding-inline: 16.5px;
+  border: gray solid 3px;
+  margin-top: 10px;
+}
+section#prods div.maqsini-img div.img-envios h3 {
+  font-size: 22px;
+  color: gray;
+  font-weight: bold;
+  padding-top: 10px;
+}
+section#prods div.slogan-1 {
+  text-align: center;
+  margin: 50px 0px 50px 0px;
+  font-size: 20px;
+}
+section#prods div.maquinas4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+section#prods div.maquinas4 img {
+  height: auto;
+  width: 250px;
+  padding-right: 25px;
+  padding-left: 25px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 30px;
+  border: gray solid 2px;
+}
+
+section#vision div.visionini {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 600px);
+  justify-content: center;
+  align-items: center;
+}
+section#vision div.visionini div.vitext {
+  font-size: 19px;
+  margin: 20px;
+}
+section#vision div.visionini div.vitext a {
+  color: white;
+  padding: 10px;
+  background-color: black;
+}
+section#vision div.visionini div.vitext div.conocer-mas {
+  display: flex;
+  flex-wrap: wrap;
+}
+section#vision img.slide-img {
+  height: auto;
+  width: 100%;
+  margin-top: 25px;
+  margin-bottom: 5px;
+}
+section#vision .video {
+  width: 100%;
+  height: 500px;
+}
+section#vision div.ig-padre {
+  text-align: center;
+  margin: 50px;
+  font-size: 20px;
+  flex-wrap: wrap;
+}
+section#vision div.ig-padre div.igini a {
+  font-size: 35px;
+  font-weight: bold;
+  text-decoration: none;
+  color: grey;
+}
+
+img.slide-img {
+  margin-top: 25px;
+}
+
+section.cortadoras {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 8px;
+  margin-top: 10px;
+}
+section.cortadoras img {
+  width: 100%;
+  height: 500;
+  border: 1px greenyellow solid;
+}
+
+footer {
+  background-color: black;
+  height: 360px;
+  flex-wrap: wrap;
+}
+footer div.padre {
+  display: grid;
+  width: 100%;
+  grid-template-rows: 250px 100px;
+  grid-template-columns: 1fr;
+  gap: 8px;
+}
+footer div.padre div.conteiner {
+  display: flex;
+  justify-content: space-around;
+}
+footer div.padre div.conteiner div.footittle h3 {
+  color: white;
+}
+footer div.padre div.conteiner div.footittle nav a {
+  text-decoration: none;
+  color: white;
+}
+footer div.padre div.conteiner div.footpago {
+  display: inline-block;
+  flex-wrap: wrap;
+  padding: 0 10px 5px 5px;
+}
+footer div.padre div.conteiner div.footpago img {
+  height: 25px;
+  width: auto;
+}
+footer div.padre div.conteiner div.footpago div.img-t {
+  width: 200px;
+}
+footer div.padre div.conteiner div.footenv img {
+  padding: 0 10px 5px 5px;
+  height: 25px;
+  width: auto;
+}
+footer div.padre div.conteiner div.footcontact a {
+  text-decoration: none;
+  color: white;
+}
+footer div.padre div.conteiner div.footcontact div.contacto {
+  color: white;
+  display: flex;
+}
+footer div.padre div.conteiner div.footsocial {
+  margin-left: 20px;
+}
+footer div.padre div.conteiner div.footsocial a {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+}
+footer div.padre div.Copyright {
+  color: white;
+  text-align: center;
+}
+
+@media all and (min-width: 600px) and (max-width: 1110px) {
+  #grilla {
+    grid-template-rows: auto auto auto 2100px auto;
+  }
+  .visionini {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 600px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+  }
+  .vitext {
+    font-size: 20px;
+    margin: 20px;
+  }
+  #vision,
+  .slide {
+    height: 50%;
+    width: 100%;
+  }
+  .video {
+    width: 100%;
+    height: 500px;
+  }
+  #grilla-p {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 5000px 3000px 3000px 500px;
+    grid-template-areas: "nav nav nav" "productos productos productos" "vision vision vision" "slide slide slide" "footer footer footer";
+  }
+  .border-p {
+    border: none;
+  }
+  header-p {
+    grid-area: nav;
+  }
+  #slide-p {
+    grid-area: slide;
+  }
+  #prods-p {
+    grid-area: productos;
+  }
+  #vision-p {
+    grid-area: vision;
+  }
+  footer-p {
+    grid-area: footer;
+  }
+  .cortadoras {
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .cortadoras h3 {
+    text-align: center;
+  }
+  .cortadoras p {
+    margin-left: 5px;
+  }
+  footer {
+    height: 600px;
+  }
+  .padre {
+    display: grid;
+    width: 100%;
+    grid-template-rows: 500px 100px;
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+  .conteiner {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+  }
+  .slide-m {
+    min-width: 600px;
+    max-width: 100%;
+  }
+}
+@media all and (min-width: 360px) and (max-width: 599px) {
+  #grilla {
+    grid-template-rows: auto auto auto 25% auto;
+  }
+  div.visionini {
+    display: grid;
+    grid-template-rows: repeat(2, 300px);
+    grid-template-columns: minmax(350px, 599px);
+    justify-content: center;
+    align-items: center;
+    gap: 1px;
+  }
+  .vision-img {
+    min-width: 350px;
+    width: 100%;
+  }
+  div.vitext {
+    font-size: 10px;
+    margin: 5px;
+  }
+  #vision,
+  .slide-img {
+    min-width: 350px;
+    width: 100%;
+    height: 40%;
+  }
+}
+.video {
+  width: 100%;
+  height: 40%;
+}
+.video #grilla-p {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 5000px 3000px 3000px 500px;
+  grid-template-areas: "nav nav nav" "productos productos productos" "vision vision vision" "slide slide slide" "footer footer footer";
+}
+.video .border-p {
+  border: none;
+}
+.video header-p {
+  grid-area: nav;
+}
+.video #slide-p {
+  grid-area: slide;
+}
+.video #prods-p {
+  grid-area: productos;
+}
+.video #vision-p {
+  grid-area: vision;
+}
+.video footer-p {
+  grid-area: footer;
+}
+.video .cortadoras {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+}
+.video .cortadoras h3 {
+  text-align: center;
+}
+.video .cortadoras p {
+  margin-left: 3px;
+  font-size: 15px;
+}
+.video .cortadoras img {
+  min-width: 340px;
+  width: 100%;
+}
+.video footer {
+  height: 900px;
+}
+.video div.padre {
+  width: 100%;
+  display: grid;
+  grid-template-rows: 800px 100px;
+  grid-template-columns: 1fr;
+  gap: 8px;
+}
+.video div.conteiner {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+}
+.video .slide-m {
+  min-width: 350px;
+}
+.video .img-pago {
+  min-width: 340px;
+  width: 100%;
+}/*# sourceMappingURL=style.css.map */
