--- a/SCSS/_productos.scss
+++ b/SCSS/_productos.scss
@@ -2,6 +2,7 @@ img.slide-img {
     margin-top: 25px;
 }
 section.cortadoras {
+    font: $title-font;
     img {   
       width: 100%;
       height: 500;
