--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -32,7 +32,7 @@
     #grilla-p {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto 6000px 2000px 2000px 500px;
+        grid-template-rows: auto 6000px 3000px 5000px 500px;
         grid-template-areas:
             "nav nav nav"
             "productos productos productos"
@@ -84,29 +84,57 @@
         }
 
     }
+    section#vision {
+        .cortadoras {
+            display: grid;
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+        }
 
- footer {
-        
-        height: 600px;
+        .cortadoras h3 {
+            text-align: center;
+        }
+
+        .cortadoras p {
+            margin-left: 5px;
+        }
+
+    }
+    section#slide-p {
+        .cortadoras {
+            display: grid;
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        .cortadoras h3 {
+            text-align: center;
+        }
+
+        .cortadoras p {
+            margin-left: 5px;
+        }
+
+    }
+
+    footer {
+        height: 800px;
+
         div.padre {
             display: grid;
             width: 100%;
-            grid-template-rows: 500px 100px;
+            grid-template-rows: 500px auto;
             grid-template-columns: 1fr;
             gap: 8px;
 
-        }
-
-        div.conteiner {
-            display: grid;
+          div.conteiner {
             grid-template-rows: 1fr;
             grid-template-columns: repeat(3, 1fr);
             justify-content: center;
-
-
-        }
+        
+       }
     }
-
+ }
     .slide-m {
         min-width: 600px;
         max-width: 100%;
@@ -158,7 +186,7 @@
     #grilla-p {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto 5500px 3000px 3500px 500px;
+        grid-template-rows: auto 5500px 3000px 4300px 500px;
         grid-template-areas:
             "nav nav nav"
             "productos productos productos"
@@ -215,7 +243,7 @@
         .cortadoras img {
             min-width: 340px;
             width: 100%;
-            
+
         }
     }
 
@@ -295,7 +323,8 @@
         min-width: 340px;
         width: 100%;
     }
-    .contacto-padre{
+
+    .contacto-padre {
         flex-direction: column;
     }
 }
