--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -1,4 +1,4 @@
-@media all and (min-width:600px) and (max-width:1110px) {
+@media all and (min-width:800px) and (max-width:1110px) {
     #grilla {
         grid-template-rows: auto auto auto 2100px auto;
     }
@@ -32,7 +32,7 @@
     #grilla-p {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto 6000px 3000px 5000px 500px;
+        grid-template-rows: auto 7300px 5000px 5000px 500px;
         grid-template-areas:
             "nav nav nav"
             "productos productos productos"
@@ -132,6 +132,150 @@
             grid-template-columns: repeat(3, 1fr);
             justify-content: center;
         
+       }
+    }
+ }
+    .slide-m {
+        min-width: 600px;
+        max-width: 100%;
+
+    }
+
+}
+@media all and (min-width:600px) and (max-width:799px) {
+    #grilla {
+        grid-template-rows: auto auto auto 2100px auto;
+    }
+
+    section#vision {
+        div.visionini {
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-columns: 600px;
+            gap: 8px;
+
+        }
+
+        .vitext {
+            font-size: 20px;
+            margin: 20px;
+        }
+    }
+
+    #vision,
+    .slide {
+        height: 50%;
+        width: 100%;
+    }
+
+    .video {
+        width: 100%;
+        height: 500px;
+
+    }
+
+    #grilla-p {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto 5000px 3800px 4000px 500px;
+        grid-template-areas:
+            "nav nav nav"
+            "productos productos productos"
+            "vision vision vision"
+            "slide slide slide"
+            "footer footer footer";
+
+
+    }
+
+    .border-p {
+        border: none;
+    }
+
+    header-p {
+        grid-area: nav;
+    }
+
+    #slide-p {
+        grid-area: slide;
+    }
+
+    #prods-p {
+        grid-area: productos;
+    }
+
+
+    #vision-p {
+        grid-area: vision;
+    }
+
+    footer-p {
+        grid-area: footer;
+    }
+
+    section#prods {
+        .cortadoras {
+            display: grid;
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        .cortadoras h3 {
+            text-align: center;
+        }
+
+        .cortadoras p {
+            margin-left: 5px;
+        }
+
+    }
+    section#vision {
+        .cortadoras {
+            display: grid;
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        .cortadoras h3 {
+            text-align: center;
+        }
+
+        .cortadoras p {
+            margin-left: 5px;
+        }
+
+    }
+    section#slide-p {
+        .cortadoras {
+            display: grid;
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        .cortadoras h3 {
+            text-align: center;
+        }
+
+        .cortadoras p {
+            margin-left: 5px;
+        }
+
+    }
+
+    footer {
+        height: 900px;
+        
+
+        div.padre {
+            width: 100%;
+            grid-template-rows: 800px 100px;
+            grid-template-columns: 1fr;
+            gap: 8px;
+
+          div.conteiner {
+            grid-template-rows: 1fr;
+            grid-template-columns: repeat(2, 1fr);
+            flex-direction: column;
+
        }
     }
  }
