--- a/CSS/base.css
+++ b/CSS/base.css
@@ -240,7 +240,8 @@ footer-p {
 
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
     gap: 8px;
     margin-top: 10px;
 
