--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -33,6 +33,7 @@ section#prods {
         text-align: center;
         margin: 50px 0px 50px 0px;
         font-size: 20px;
+        background-color: white;
     }
 
     div.maquinas4 {
@@ -51,6 +52,7 @@ section#prods {
             margin-left: 5px;
             margin-bottom: 30px;
             border: gray solid 2px;
+            background-color: white;
         }
     }
 }
@@ -67,6 +69,7 @@ section#vision {
         
 
         div.vitext {
+            background-color: white;
             font-size: 19px;
             margin: 20px;
 
@@ -94,7 +97,7 @@ section#vision {
     }
 
     .video {
-       height: auto;
+       height: 500px;
        width: 100%;
     }
 
