--- a/SCSS/_productos.scss
+++ b/SCSS/_productos.scss
@@ -1,17 +1,28 @@
 img.slide-img {
     margin-top: 25px;
 }
+
 section.cortadoras {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
+    margin-top: 10px;
+    background-color: #ffff;
+    max-width: 1300px;
+    text-align: center;
+    margin: 0 auto;
+    align-items: center;
     font: $title-font;
-    img {   
-      width: 100%;
-      height: 500;
-      border: 1px greenyellow solid;
-  }
-      display: grid;
-      grid-template-rows: repeat(4, 1fr);
-      grid-template-columns: repeat(2, 1fr);
-      gap: 8px;
-      margin-top: 10px;
-      
+    img {
+        width: 100%;
+        height: 500;
+        border: 3px #9c0f97 solid;
+    }
+   div.text{
+    background-color: white;
+    border: 3px #9c0f97 solid;
+
+   }
+
 }
