--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -9,6 +9,7 @@
     display: flex;
     position: fixed;
     z-index: 1;
+    background-color: white;
 
     .navini {
         padding-right: 50px;
@@ -16,6 +17,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+    
 
         a {
             color: black;
@@ -24,14 +26,59 @@
             text-decoration: none;
             padding-inline: 12px;
         }
+        div.navbar-nav {
+            a:hover{
+            color: gray;
+            border-bottom: 1px solid black;
+            border-top: 1px solid black;
+          }
+        }
 
         img {
             width: 100px;
             height: auto;
             margin: 0 0 3px 0;
             border-bottom: 2px solid black;
+            -webkit-animation: rotate-scale-up 0.65s linear both;
+            animation: rotate-scale-up 0.65s linear both;
+        
+
+            @-webkit-keyframes rotate-scale-up {
+                0% {
+                    -webkit-transform: scale(1) rotateZ(0);
+                    transform: scale(1) rotateZ(0);
+                }
+
+                50% {
+                    -webkit-transform: scale(2) rotateZ(180deg);
+                    transform: scale(2) rotateZ(180deg);
+                }
+
+                100% {
+                    -webkit-transform: scale(1) rotateZ(360deg);
+                    transform: scale(1) rotateZ(360deg);
+                }
+            }
+
+            @keyframes rotate-scale-up {
+                0% {
+                    -webkit-transform: scale(1) rotateZ(0);
+                    transform: scale(1) rotateZ(0);
+                }
+
+                50% {
+                    -webkit-transform: scale(2) rotateZ(180deg);
+                    transform: scale(2) rotateZ(180deg);
+                }
+
+                100% {
+                    -webkit-transform: scale(1) rotateZ(360deg);
+                    transform: scale(1) rotateZ(360deg);
+                }
+            }
 
         }
+
     }
 
 }
