--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -8,17 +8,31 @@ section#prods {
         text-align: center;
         flex-wrap: wrap;
 
+
         div.img-envios {
 
             img {
                 height: auto;
                 width: 333px;
                 padding-inline: 16.5px;
-                border: gray solid 3px;
+                border: 4px outset #fd50ff;
                 margin-top: 10px;
-
+                background-color: white;
+                opacity: 1;
+                transition: 1s ease 0s;
 
             }
+
+            img:hover {
+                opacity: 0.65;
+                transform: scale(1.1) ;
+                -webkit-transform: scale(1.1) ;
+                -moz-transform: scale(1.1) ;
+
+            }
+
+
+
 
             h3 {
                 font-size: 22px;
@@ -29,11 +43,16 @@ section#prods {
         }
     }
 
+
+
     div.slogan-1 {
         text-align: center;
         margin: 50px 0px 50px 0px;
         font-size: 20px;
-        background-color: white;
+        background: #ffff;
+
+
+
     }
 
     div.maquinas4 {
@@ -51,14 +70,25 @@ section#prods {
             margin-right: 5px;
             margin-left: 5px;
             margin-bottom: 30px;
-            border: gray solid 2px;
+            border: 4px outset #fd50ff;
             background-color: white;
+            transition: 1s ease 0s;
+        }
+
+        img:hover {
+            
+            transform: scale(1.4) ;
+            -webkit-transform: scale(1.4) ;
+            -moz-transform: scale(1.4) ;
+            
+
+            
         }
     }
 }
 
 section#vision {
-   font: $title-font;
+    font: $title-font;
 
     div.visionini {
         display: grid;
@@ -66,12 +96,13 @@ section#vision {
         grid-template-columns: repeat(2, 600px);
         justify-content: center;
         align-items: center;
-        
+
 
         div.vitext {
             background-color: white;
             font-size: 19px;
             margin: 20px;
+
 
             a {
                 color: white;
@@ -97,8 +128,8 @@ section#vision {
     }
 
     .video {
-       height: 500px;
-       width: 100%;
+        height: 500px;
+        width: 100%;
     }
 
     div.ig-padre {
