--- a/SCSS/_productos.scss
+++ b/SCSS/_productos.scss
@@ -17,11 +17,14 @@ section.cortadoras {
     img {
         width: 100%;
         height: 500;
-        border: 3px #9c0f97 solid;
+        border: 4px outset #fd50ff;
+    }
+    img:hover{
+        image-rendering: pixelated;
     }
    div.text{
     background-color: white;
-    border: 3px #9c0f97 solid;
+    border: 4px outset #fd50ff;
 
    }
 
