--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -36,7 +36,7 @@ footer {
 #grilla-p {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 60px 3200px 2200px 2200px 400px;
+  grid-template-rows: 60px 3400px 2200px 2200px 400px;
   grid-template-areas: "nav nav nav" "productos productos productos" "vision vision vision" "slide slide slide" "footer footer footer";
 }
 
@@ -111,6 +111,7 @@ section.marca {
   display: flex;
   position: fixed;
   z-index: 1;
+  background-color: white;
 }
 .navbar .navini {
   padding-right: 50px;
@@ -126,11 +127,28 @@ section.marca {
   text-decoration: none;
   padding-inline: 12px;
 }
+.navbar .navini div.navbar-nav a:hover {
+  color: gray;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+}
 .navbar .navini img {
   width: 100px;
   height: auto;
   margin: 0 0 3px 0;
   border-bottom: 2px solid black;
+  animation: rotate-scale-up 0.65s linear both;
+}
+@keyframes rotate-scale-up {
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(2) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(1) rotateZ(360deg);
+  }
 }
 
 section#prods {
@@ -147,8 +165,17 @@ section#prods div.maqsini-img div.img-envios img {
   height: auto;
   width: 333px;
   padding-inline: 16.5px;
-  border: gray solid 3px;
+  border: 4px outset #fd50ff;
   margin-top: 10px;
+  background-color: white;
+  opacity: 1;
+  transition: 1s ease 0s;
+}
+section#prods div.maqsini-img div.img-envios img:hover {
+  opacity: 0.65;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
 }
 section#prods div.maqsini-img div.img-envios h3 {
   font-size: 22px;
@@ -160,7 +187,7 @@ section#prods div.slogan-1 {
   text-align: center;
   margin: 50px 0px 50px 0px;
   font-size: 20px;
-  background-color: white;
+  background: white;
 }
 section#prods div.maquinas4 {
   display: flex;
@@ -177,8 +204,14 @@ section#prods div.maquinas4 img {
   margin-right: 5px;
   margin-left: 5px;
   margin-bottom: 30px;
-  border: gray solid 2px;
+  border: 4px outset #fd50ff;
   background-color: white;
+  transition: 1s ease 0s;
+}
+section#prods div.maquinas4 img:hover {
+  transform: scale(1.4);
+  -webkit-transform: scale(1.4);
+  -moz-transform: scale(1.4);
 }
 
 section#vision {
@@ -248,11 +281,14 @@ section.cortadoras {
 section.cortadoras img {
   width: 100%;
   height: 500;
-  border: 3px #9c0f97 solid;
+  border: 4px outset #fd50ff;
+}
+section.cortadoras img:hover {
+  image-rendering: pixelated;
 }
 section.cortadoras div.text {
   background-color: white;
-  border: 3px #9c0f97 solid;
+  border: 4px outset #fd50ff;
 }
 
 div.main main div.conteiner_pf {
