--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -481,3 +481,38 @@
         }
     }
 }
+@media (hover: hover){
+    .navini {
+        div.navbar-nav {
+            a:hover{
+            color: gray;
+            border-bottom: 1px solid black;
+            border-top: 1px solid black;
+          }
+        }
+    }
+   
+    div.img-envios {
+        img:hover {
+            opacity: 0.65;
+            transform: scale(1.1) ;
+            -webkit-transform: scale(1.1) ;
+            -moz-transform: scale(1.1) ;
+
+        }
+
+    }
+    div.maquinas4 {
+        img:hover {
+            
+            transform: scale(1.4) ;
+            -webkit-transform: scale(1.4) ;
+            -moz-transform: scale(1.4) ;
+            
+
+            
+        }
+    }
+
+    
+}
