--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -111,7 +111,6 @@ section.marca {
   display: flex;
   position: fixed;
   z-index: 1;
-  background-color: white;
 }
 .navbar .navini {
   padding-right: 50px;
@@ -144,7 +143,7 @@ section.marca {
     transform: scale(1) rotateZ(0);
   }
   50% {
-    transform: scale(2) rotateZ(180deg);
+    transform: scale(1.5) rotateZ(180deg);
   }
   100% {
     transform: scale(1) rotateZ(360deg);
@@ -726,5 +725,23 @@ footer div.padre div.Copyright {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 1fr;
     margin-bottom: 50px;
+  }
+}
+@media (hover: hover) {
+  .navini div.navbar-nav a:hover {
+    color: gray;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+  }
+  div.img-envios img:hover {
+    opacity: 0.65;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+  }
+  div.maquinas4 img:hover {
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
   }
 }/*# sourceMappingURL=style.css.map */
