--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -481,7 +481,7 @@
         }
     }
 }
-@media (hover: hover){
+@media screen and (min-width: 1500px) {
     .navini {
         div.navbar-nav {
             a:hover{
