--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -9,6 +9,9 @@
     display: flex;
     position: fixed;
     z-index: 1;
+  
+   
+
 
     .navini {
         padding-right: 50px;
@@ -16,7 +19,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-    
+       
 
         a {
             color: black;
@@ -24,8 +27,10 @@
             margin-right: 75.5px;
             text-decoration: none;
             padding-inline: 12px;
+            font-size: 16px;
+            font-weight: 50;
         }
-       
+
 
         img {
             width: 100px;
@@ -34,7 +39,7 @@
             border-bottom: 2px solid black;
             -webkit-animation: rotate-scale-up 0.65s linear both;
             animation: rotate-scale-up 0.65s linear both;
-        
+
 
             @-webkit-keyframes rotate-scale-up {
                 0% {
