--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -18,7 +18,6 @@ section#prods {
                 border: 4px outset #fd50ff;
                 margin-top: 10px;
                 background-color: white;
-                opacity: 1;
                 transition: 1s ease 0s;
 
             }
@@ -59,9 +58,10 @@ section#prods {
             margin-right: 5px;
             margin-left: 5px;
             margin-bottom: 30px;
-            border: 4px outset #fd50ff;
-            background-color: white;
             transition: 1s ease 0s;
+            background-color: white;
+            border: 4px outset #fd50ff;
+
         }
 
       
@@ -124,7 +124,9 @@ section#vision {
                 font-size: 35px;
                 font-weight: bold;
                 text-decoration: none;
-                color: grey;
+                color: #a62a9b;
+                text-shadow: -14px 35px 5px #f100f1;
+                
             }
         }
     }
