--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -84,6 +84,7 @@
         }
 
     }
+
     section#vision {
         .cortadoras {
             display: grid;
@@ -100,6 +101,7 @@
         }
 
     }
+
     section#slide-p {
         .cortadoras {
             display: grid;
@@ -127,14 +129,15 @@
             grid-template-columns: 1fr;
             gap: 8px;
 
-          div.conteiner {
-            grid-template-rows: 1fr;
-            grid-template-columns: repeat(3, 1fr);
-            justify-content: center;
-        
-       }
+            div.conteiner {
+                grid-template-rows: 1fr;
+                grid-template-columns: repeat(3, 1fr);
+                justify-content: center;
+
+            }
+        }
     }
- }
+
     .slide-m {
         min-width: 600px;
         max-width: 100%;
@@ -142,6 +145,7 @@
     }
 
 }
+
 @media all and (min-width:600px) and (max-width:799px) {
     #grilla {
         grid-template-rows: auto auto auto 2100px auto;
@@ -228,6 +232,7 @@
         }
 
     }
+
     section#vision {
         .cortadoras {
             display: grid;
@@ -244,6 +249,7 @@
         }
 
     }
+
     section#slide-p {
         .cortadoras {
             display: grid;
@@ -263,7 +269,7 @@
 
     footer {
         height: 900px;
-        
+
 
         div.padre {
             width: 100%;
@@ -271,14 +277,15 @@
             grid-template-columns: 1fr;
             gap: 8px;
 
-          div.conteiner {
-            grid-template-rows: 1fr;
-            grid-template-columns: repeat(2, 1fr);
-            flex-direction: column;
+            div.conteiner {
+                grid-template-rows: 1fr;
+                grid-template-columns: repeat(2, 1fr);
+                flex-direction: column;
 
-       }
+            }
+        }
     }
- }
+
     .slide-m {
         min-width: 600px;
         max-width: 100%;
@@ -287,7 +294,7 @@
 
 }
 
-@media all and (min-width:360px) and (max-width:599px) {
+@media all and (min-width:320px) and (max-width:599px) {
 
     #grilla {
         grid-template-rows: auto auto auto 35% auto;
@@ -393,7 +400,7 @@
 
     section#vision {
         .cortadoras {
-            display: grid;
+
             grid-template-rows: repeat(6, 1fr);
             grid-template-columns: repeat(1, 1fr);
 
@@ -471,48 +478,47 @@
     .contacto-padre {
         flex-direction: column;
     }
+
     section.marca {
         div.main {
             div.contacto-padre {
-                grid-template-rows:repeat(2,1fr);
+                grid-template-rows: repeat(2, 1fr);
                 grid-template-columns: 1fr;
                 margin-bottom: 50px;
             }
         }
     }
 }
-@media screen and (min-width: 1500px) {
+
+@media screen and (min-width: 1200px) {
     .navini {
         div.navbar-nav {
-            a:hover{
-            color: gray;
-            border-bottom: 1px solid black;
-            border-top: 1px solid black;
-          }
+            a:hover {
+                color: gray;
+                border-bottom: 1px solid black;
+                border-top: 1px solid black;
+            }
         }
     }
-   
+
     div.img-envios {
         img:hover {
             opacity: 0.65;
-            transform: scale(1.1) ;
-            -webkit-transform: scale(1.1) ;
-            -moz-transform: scale(1.1) ;
+            transform: scale(1.1);
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
 
         }
 
     }
+
     div.maquinas4 {
         img:hover {
-            
-            transform: scale(1.4) ;
-            -webkit-transform: scale(1.4) ;
-            -moz-transform: scale(1.4) ;
-            
-
-            
+            transform: scale(1.2);
+            -webkit-transform: scale(1.2);
+            -moz-transform: scale(1.2)
         }
     }
 
-    
+
 }
