--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -294,13 +294,13 @@
 
 }
 
-@media all and (min-width:320px) and (max-width:599px) {
+@media all and (min-width:360px) and (max-width:599px) {
 
     #grilla {
         grid-template-rows: auto auto auto 35% auto;
     }
 
-
+   
     section#vision {
         div.visionini {
             grid-template-rows: repeat(2, auto);
@@ -378,6 +378,11 @@
             grid-template-rows: repeat(6, 1fr);
             grid-template-columns: repeat(1, 1fr);
 
+        }
+        img.slide-img-p {
+            margin-top: 25px;
+            height: 100%;
+            width: 100%;
         }
 
         .cortadoras h3 {
