--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -99,6 +99,9 @@ section.marca {
   margin-right: auto;
   max-width: 1200px;
 }
+.main ul {
+  list-style: none;
+}
 
 * {
   padding: 0;
@@ -132,7 +135,6 @@ section.marca {
   width: 100px;
   height: auto;
   margin: 0 0 3px 0;
-  border-bottom: 2px solid black;
   animation: rotate-scale-up 0.65s linear both;
 }
 @keyframes rotate-scale-up {
@@ -580,7 +582,7 @@ footer div.padre div.Copyright {
     max-width: 100%;
   }
 }
-@media all and (min-width: 320px) and (max-width: 599px) {
+@media all and (min-width: 360px) and (max-width: 599px) {
   #grilla {
     grid-template-rows: auto auto auto 35% auto;
   }
@@ -634,6 +636,11 @@ footer div.padre div.Copyright {
   section#prods .cortadoras {
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(1, 1fr);
+  }
+  section#prods img.slide-img-p {
+    margin-top: 25px;
+    height: 100%;
+    width: 100%;
   }
   section#prods .cortadoras h3 {
     text-align: center;
