--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -115,6 +115,9 @@ section.marca {
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px;
+    ul{
+        list-style: none
+    }
 }
 
 
